--- a/mozilla/celtx/locales/en-US/chrome/branding/brand.dtd
+++ b/mozilla/celtx/locales/en-US/chrome/branding/brand.dtd
@@ -1,3 +1,3 @@
-<!ENTITY  brandShortName        "Celtx">
-<!ENTITY  brandFullName         "Celtx">            
-<!ENTITY  vendorShortName       "Greyfirst">
+<!ENTITY  brandShortName        "Drood">
+<!ENTITY  brandFullName         "Drood">            
+<!ENTITY  vendorShortName       "EssEll Mindworks">
