--- a/mozilla/celtx/base/resources/locale/en-US/celtx.properties
+++ b/mozilla/celtx/base/resources/locale/en-US/celtx.properties
@@ -196,7 +196,7 @@ ID=ID
 ImportTextScript=Import Text Script
 ImportingScript=Importing "%S"
 IntExtHeader=I/E
-InvalidProjectFile=The file you selected is not a valid .drood project file.
+InvalidProjectFile=The file you selected is not a valid .celtx project file.
 InvalidScene=Invalid scene
 ItemNameMsg=Enter a name for this new item.
 ItemNameTitle=New Item Name
