--- a/mozilla/celtx/locales/en-US/chrome/branding/brand.dtd
+++ b/mozilla/celtx/locales/en-US/chrome/branding/brand.dtd
@@ -1,3 +1,3 @@
 <!ENTITY  brandShortName        "open-celtx">
 <!ENTITY  brandFullName         "open-celtx">
-<!ENTITY  vendorShortName       "EssEll Mindworks">
+<!ENTITY  vendorShortName       "Debian Software">
